--- a/ConsoleAppTest/ConsoleAppTest.csproj
+++ b/ConsoleAppTest/ConsoleAppTest.csproj
@@ -7,9 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="5.0.0-preview.2.20160.6" />
     <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0-preview.2.20160.6" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="System.IO" Version="4.3.0" />
     <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
@@ -24,6 +25,9 @@
   <ItemGroup>
     <Reference Include="QrCodeMangagerCore">
       <HintPath>..\QrCodeMangagerCore\bin\Debug\netcoreapp3.1\QrCodeMangagerCore.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLServerSupportLib">
+      <HintPath>..\..\SqlServerSupportLib\SQLServerSupportLib\bin\Debug\netcoreapp3.0\SQLServerSupportLib.dll</HintPath>
     </Reference>
   </ItemGroup>
 
